k8s/services/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api

spec:
  type: ClusterIP
  ports:
    - targetPort: 5000
      port: 5000

  selector:
      app: api
      type: backend
