k8s/services/db-headless-service.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres

spec:
  clusterIP: None

  selector:
    app: postgres
    type: backend

  ports:
    - port: 5432
      targetPort: 5432
