k8s/services/redis-headless-service.yml
apiVersion: v1
kind: Service

metadata:
  name: redis

spec:
  clusterIP: None

  selector:
    app: redis
    type: backend

  ports:
    - port: 6379
      targetPort: 6379
