k8s/services/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: app-ingress
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: client
                port:
                  number: 3000

          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 5000
